--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# C related
+*.d
+*.cmd
+*.o
+*.obj
+*.out
+Lectures/1st/c/exercise6
